faisal.css
/* ... */
.social-media-link:hover {
  color: var(--lsc-color-white);
  background-color: var(--lsc-color-accent);
  border-color: var(--lsc-color-accent);
}
.social-media-icon {
  width: 1.25rem;
}
.footer-menu-title {
  font-size: .8125rem;
  font-style: normal;
  font-weight: 700;
  line-height: 150%;
  letter-spacing: .08125rem;
  text-transform: uppercase;
}
.footer-menu-list {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-direction: column;
  row-gap: .5rem;
}
.footer-menu-list a {
  color: rgba(26, 22, 20, 0.50);
  font-size: .875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  text-decoration: none;
  transition: 0.3s all ease;
}
.footer-menu-list a:hover {
  color: var(--lsc-color-accent);
}
.footer-contact-list {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  list-style: none;
  row-gap: 1rem;
}
.footer-contact-item {
  display: flex;
  column-gap: .625rem;
  color: rgba(26, 22, 20, 0.50);
  font-size: .875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.4rem;
}
.footer-contact-icon {
  width: 1.25rem;
  color: var(--lsc-color-accent);
}
.footer-contact-item a {
  color: rgba(26, 22, 20, 0.50);
  text-decoration: none;
}
.footer-company-registrations {
  padding: 0;
  margin-top: 4.375rem;
  border-top: 0.063rem solid rgba(26, 22, 20, 0.06);
  padding-top: 2.0625rem;
  padding-bottom: 11.25rem;
  display: grid;
  grid-template-columns: repeat(3,1fr);
  column-gap: 2rem;
}
.footer-company-title {
	color: rgba(26, 22, 20, 0.55);
	font-size: .8125rem;
	font-style: normal;
	font-weight: 600;
	line-height: 150%;
	margin-bottom: 0;
}
 .footer-contact-item a:hover {
  color: var(--lsc-color-accent);
  }
.footer-company-text {
	color: rgba(26, 22, 20, 0.28);
	font-size: .75rem;
	font-style: normal;
	font-weight: 400;
	line-height: 165%;
	 margin-top: .625rem;
}
.footer-bottom {
  border-top: 0.063rem solid rgba(26, 22, 20, 0.06);
	background-color: #F5F3EF;
}
.footer-bottom-inner {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  padding-top: 1.25rem;
  padding-bottom: 1rem;
  color: #666;
  text-align: center;
  font-size: .8125rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.21875rem;
}
@media only screen and (max-width:991px) {
   .footer-logo-link {
    max-width: 9.375rem;
  }
  .footer-company-registrations {
    padding-bottom: 7rem;
  }
}
@media only screen and (max-width:767px) {
  .footer-top {
    grid-template-columns: 1fr;
    row-gap: 1.875rem;
  }
  .footer-tagline {
    max-width: 100%;
  }
  .footer-logo-link {
    max-width: 8.4375rem;
  }
  .footer-tagline {
	  margin-top: 1.2rem;
  }
  .footer-menu-list {
	  row-gap: 0;
  }
  .footer-company-registrations {
    grid-template-columns: 1fr;
    row-gap: 1.25rem;
    padding-bottom: 4rem;
    margin-top: 3rem;
  }
}
 /*
===============================================
 Footer Style End
===============================================
 */

